# high-res-ascii-painter

./: .gitignore  README.md  WINDOWS_BUILD_GUIDE.md  ascii-painter.sh  ascii-painter.spec  ascii_converter.py  build_windows.bat  build_windows.py  cli.py  create_release.sh  image_loader.py  main.py  painter.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: build-windows.yml
src/high_res_ascii_painter/: __init__.py  ascii_converter.py  cli.py  config.py  image_loader.py  painter.py  utils.py
