[project]
name = "high-res-ascii-painter"
version = "0.1.1"
description = "Slack-Optimized ASCII Art Generator"
readme = "README.md"
authors = [
    { name = "cookapps-jhlee11", email = "jhlee11@cookapps.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pillow>=9.0.0",
    "requests>=2.25.0",
]
keywords = ["ascii", "art", "image", "slack", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
ascii-painter = "high_res_ascii_painter:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
